--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <div class="jumbotron">
   <div class="container text-center">
-    <img src="./images/gb_outside.jpg">
+    <img src="./images/gb_outside.jpg" class="img-responsive" style="width:100%">
     <h1>My Portfolio</h1>      
     <p>Some text that represents "Me"...</p>
   </div>
