--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <iframe src="https://open.spotify.com/embed/artist/1SfVMyhBUa6GmDEk0M1kM3" width: "100%" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
   <!-- 21:9 aspect ratio -->
-  <div class="embed-responsive embed-responsive-21by9">
+  <!-- <div class="embed-responsive embed-responsive-21by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jx2nKBqqJWY" allowfullscreen></iframe>
-  </div>
+  </div> -->
 
   <!-- 16:9 aspect ratio -->
   <div class="embed-responsive embed-responsive-16by9">
@@ -46,14 +46,14 @@
   </div>
 
   <!-- 4:3 aspect ratio -->
-  <div class="embed-responsive embed-responsive-4by3">
+  <!-- <div class="embed-responsive embed-responsive-4by3">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jx2nKBqqJWY" allowfullscreen></iframe>
-  </div>
+  </div> -->
 
   <!-- 1:1 aspect ratio -->
-  <div class="embed-responsive embed-responsive-1by1">
+  <!-- <div class="embed-responsive embed-responsive-1by1">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jx2nKBqqJWY" allowfullscreen></iframe>
-  </div>
+  </div> -->
 </div><br>
 
 
