update of spacing

--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
   
   <div class="row justify-content-md-center row-height">
     <p><img src="./images/peace.jpg" class="img-responsive center-block p1"></p>
-  
+
+    <p> <iframe src="https://open.spotify.com/embed/artist/1SfVMyhBUa6GmDEk0M1kM3" width: "100%" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
+
+    <div class="col-sm-8 col-md-offset-2 text-center"> 
+      <!-- 16:9 aspect ratio -->
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jx2nKBqqJWY" allowfullscreen></iframe>
+    </div>    
+
     <p><img src="./images/india_fanta_nic.jpg" class="img-responsive center-block"></p>
-
-    <p> Some of my work <br><iframe src="https://open.spotify.com/embed/artist/1SfVMyhBUa6GmDEk0M1kM3" width: "100%" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
-
-    <p>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2 embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jx2nKBqqJWY" allowfullscreen></iframe>
-        </div>
-    </p>
 
   </div>
 </div>
