--- a/index.html
+++ b/index.html
@@ -54,72 +54,24 @@
     <h1>Good Brother</h1>      
   </div>
 </div>
-<<<<<<< HEAD
-  
-<div class="container-fluid text-center">    
-
-  <div class="col-sm-2 sidenav">
-  </div>
-  <div class="col-sm-8 text-center"> 
-    <h3>Some of my Work</h3><br>
-    <iframe src="https://open.spotify.com/embed/album/5G9wib1QfPigyxDUL8444c" width="300" height="380" frameborder="0" data-mce-fragment="1" allow="encrypted-media"></iframe>
- 
-  </div>
-</div><br>
-
-
-<div class="container-fluid text-center">    
-
-    <div class="col-sm-2 sidenav">
-    </div>
-  
-  
-    <div class="col-sm-8 text-center"> 
-      <!-- 21:9 aspect ratio -->
-      <div class="embed-responsive embed-responsive-21by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jx2nKBqqJWY" allowfullscreen></iframe>
-      </div>
-  
-      <!-- 16:9 aspect ratio -->
-      <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jx2nKBqqJWY" allowfullscreen></iframe>
-      </div>
-  
-      <!-- 4:3 aspect ratio -->
-      <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jx2nKBqqJWY" allowfullscreen></iframe>
-      </div>
-  
-      <!-- 1:1 aspect ratio -->
-      <div class="embed-responsive embed-responsive-1by1">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jx2nKBqqJWY" allowfullscreen></iframe>
-      </div>
-    </div>
-  </div><br>
-
-<footer class="container-fluid text-center">
-  <p>Footer Text</p>
-</footer>
-=======
 
 <div class="container-fluid text-center">    
   
   <div class="row justify-content-md-center row-height">
     <p><img src="./images/peace.jpg" class="img-responsive center-block p1"></p>
-  
+
+    <p> <iframe src="https://open.spotify.com/embed/artist/1SfVMyhBUa6GmDEk0M1kM3" width: "100%" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
+
+    <div class="col-sm-8 col-md-offset-2 text-center"> 
+      <!-- 16:9 aspect ratio -->
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jx2nKBqqJWY" allowfullscreen></iframe>
+    </div>    
+
     <p><img src="./images/india_fanta_nic.jpg" class="img-responsive center-block"></p>
-
-    <p> Some of my work <br><iframe src="https://open.spotify.com/embed/artist/1SfVMyhBUa6GmDEk0M1kM3" width: "100%" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
-
-    <p>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2 embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jx2nKBqqJWY" allowfullscreen></iframe>
-        </div>
-    </p>
 
   </div>
 </div>
->>>>>>> development
 
 </body>
 </html>
