--- a/index.html
+++ b/index.html
@@ -20,36 +20,26 @@
       padding: 25px;
     }
 
-    /* .row-height {
-      background-color: #9ccef0;
-      position: relative;
+    p {
+      margin-top: 20vh;
+      margin-bottom: 20vh;
     }
 
-    .row-height p {
+    landing {
       position: relative;
       top: 50%;
       left: 50%;
       -ms-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);
       height: 70%;
-    } */
-
-    /* .row-height img {
-      width: auto;
-      height: 70%;
-    } */
-
-    p {
-      margin-top: 20vh;
-      margin-bottom: 20vh;
     }
 
   </style>
 </head>
 <body>
 
-<div class="jumbotron">
-  <div class="container text-center">
+<div class="jumbotron" style="height: 100vh;">
+  <div class="container landing text-center">
     <img src="./images/gb_2019.jpg" class="img-responsive" style="width:100%">
     <h1>Good Brother</h1>      
   </div>
