--- a/index.html
+++ b/index.html
@@ -34,20 +34,34 @@
       height: 70%;
     }
 
+    .row-height {
+      background-color: #9ccef0;
+      position: relative;
+      height: 100vh;
+    }
+
+    .row-height p {
+      transform: translate(-50%, -50%);
+      position: absolute;
+      top: 25%;
+      left: 50%;
+      font-size: 16px%;
+    }
+
   </style>
 </head>
 <body>
 
-<div class="jumbotron" style="height: 100vh;">
-  <div class="container landing text-center">
-    <img src="./images/gb_2019.jpg" class="img-responsive" style="width:100%">
-    <h1>Good Brother</h1>      
-  </div>
+<div class="jumbotron row-height">
+  <p class="container text-center">
+    <img src="./images/gb_2019.jpg" class="img-responsive">
+    Good Brother
+  </p>
 </div>
 
 <div class="container-fluid text-center">    
   
-  <div class="row justify-content-md-center row-height">
+  <div class="row justify-content-md-center">
     <p><img src="./images/peace.jpg" class="img-responsive center-block p1"></p>
 
     <p> <iframe src="https://open.spotify.com/embed/artist/1SfVMyhBUa6GmDEk0M1kM3" width: "100%" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
