--- a/index.html
+++ b/index.html
@@ -25,27 +25,18 @@
       margin-bottom: 20vh;
     }
 
-    landing {
-      position: relative;
-      top: 50%;
-      left: 50%;
-      -ms-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-      height: 70%;
-    }
-
     .row-height {
-      background-color: #9ccef0;
+      /* background-color: #9ccef0; */
       position: relative;
       height: 100vh;
     }
 
-    .row-height p {
+    .row-height p1 {
       transform: translate(-50%, -50%);
       position: absolute;
-      top: 25%;
+      top: 50%;
       left: 50%;
-      font-size: 16px%;
+      font-size: 15vh;
     }
 
   </style>
@@ -53,10 +44,10 @@
 <body>
 
 <div class="jumbotron row-height">
-  <p class="container text-center">
-    <img src="./images/gb_2019.jpg" class="img-responsive">
+  <p1 class="container text-center">
+    <img src="./images/gb_2019.jpg" class="img-responsive" width="100%">
     Good Brother
-  </p>
+  </p1>
 </div>
 
 <div class="container-fluid text-center">    
