--- a/index.html
+++ b/index.html
@@ -5,47 +5,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Notable&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <style>
-    /* Remove the navbar's default margin-bottom and rounded borders */ 
-    .navbar {
-      margin-bottom: 0;
-      border-radius: 0;
-    }
-    
-    /* Add a gray background color and some padding to the footer */
-    footer {
-      background-color: #f2f2f2;
-      padding: 25px;
-    }
-
-    p {
-      margin-top: 20vh;
-      margin-bottom: 20vh;
-    }
-
-    .row-height {
-      /* background-color: #9ccef0; */
-      position: relative;
-      height: 100vh;
-    }
-
-    .row-height p1 {
-      transform: translate(-50%, -50%);
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      font-size: 15vh;
-    }
-
-  </style>
 </head>
 <body>
 
-<div class="jumbotron row-height">
-  <p1 class="container text-center">
-    <img src="./images/gb_2019.jpg" class="img-responsive" width="100%">
+<div class="jumbotron">
+  <!-- <a href="#" class="fa fa-facebook"></a>
+  <a href="#" class="fa fa-twitter"></a> -->
+  <p1>
+    <img src="./images/gb_2019.jpg" class="img-responsive center-block" width="90%">
     Good Brother
   </p1>
 </div>
@@ -53,7 +25,7 @@
 <div class="container-fluid text-center">    
   
   <div class="row justify-content-md-center">
-    <p><img src="./images/peace.jpg" class="img-responsive center-block p1"></p>
+    <p ><img src="./images/peace.jpg" class="img-responsive center-block p1"></p>
 
     <p> <iframe src="https://open.spotify.com/embed/artist/1SfVMyhBUa6GmDEk0M1kM3" width: "100%" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
 
