--- a/index.html
+++ b/index.html
@@ -25,19 +25,23 @@
 <div class="container-fluid text-center">    
   
   <div class="row justify-content-md-center">
-    <p ><img src="./images/peace.jpg" class="img-responsive center-block p1"></p>
-
-    <p> <iframe src="https://open.spotify.com/embed/artist/1SfVMyhBUa6GmDEk0M1kM3" width: "100%" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
-
-    <div class="col-sm-8 col-md-offset-2 text-center"> 
-      <!-- 16:9 aspect ratio -->
-      <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jx2nKBqqJWY" allowfullscreen></iframe>
-    </div>    
-
-    <p><img src="./images/india_fanta_nic.jpg" class="img-responsive center-block"></p>
-
+    <p ><img src="./images/peace.jpg" class="img-responsive center-block" width="80%"></p>
   </div>
+
+  <div class="row justify-content-md-center">
+    <p> <iframe src="https://open.spotify.com/embed/artist/1SfVMyhBUa6GmDEk0M1kM3" width: "100%" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
+  </div>
+
+  <div class="row justify-content-md-center">
+    <div style="position:relative;height:50vw;margin-top: 20vh;margin-bottom: 20vh;">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jx2nKBqqJWY" allowfullscreen style="position:absolute;transform: translate(-50%, -50%);top:50%;left:50%;width:80%;height:100%;"></iframe>
+    </div>
+  </div>
+
+  <div class="row justify-content-md-center">
+    <p><img src="./images/india_fanta_nic.jpg" class="img-responsive center-block"></p>
+  </div>
+  
 </div>
 
 </body>
