--- a/index.html
+++ b/index.html
@@ -13,13 +13,35 @@
 </head>
 <body>
 
-<div class="jumbotron">
-  <!-- <a href="#" class="fa fa-facebook"></a>
-  <a href="#" class="fa fa-twitter"></a> -->
-  <p1>
-    <img src="./images/gb_2019.jpg" class="img-responsive center-block" width="90%">
-    Good Brother
-  </p1>
+<!-- <div class="icon-bar">
+  <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> 
+  <a href="#" class="soundcloud"><i class="fa fa-soundcloud"></i></a> 
+  <a href="#" class="instagram"><i class="fa fa-instagram"></i></a> 
+  <a href="#" class="youtube"><i class="fa fa-youtube"></i></a> 
+</div> -->
+
+<!-- <div class="container-fluid text-center">  
+    <div class="row justify-content-md-center">
+        <div class="icon-bar">
+            <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> 
+            <a href="#" class="soundcloud"><i class="fa fa-soundcloud"></i></a> 
+            <a href="#" class="instagram"><i class="fa fa-instagram"></i></a> 
+            <a href="#" class="youtube"><i class="fa fa-youtube"></i></a> 
+          </div>
+    </div>  
+</div> -->
+
+<div class="container-fluid text-center landing">
+  <div class="row justify-content-md-center">
+      <img src="./images/gb_2019.jpg" class="img-responsive center-block" width="65%">
+      Good Brother
+  </div>
+  <div style="font-size: 3vw">
+      <a href="https://www.facebook.com/goodbrothermusic/" class="fa fa-facebook"></a> 
+      <a href="https://soundcloud.com/imgoodbrother" class="fa fa-soundcloud"></a> 
+      <a href="https://www.instagram.com/imgoodbrother/?hl=en" class="fa fa-instagram"></a> 
+      <a href="https://www.youtube.com/channel/UCNl7mv0_N06MFsK4Y8ZgfQw" class="fa fa-youtube"></a> 
+  </div>
 </div>
 
 <div class="container-fluid text-center">    
@@ -39,7 +61,7 @@
   </div>
 
   <div class="row justify-content-md-center">
-    <p><img src="./images/india_fanta_nic.jpg" class="img-responsive center-block"></p>
+    <p><img src="./images/india_fanta_nic.jpg" class="img-responsive center-block" style="max-width: 70vw;"></p>
   </div>
   
 </div>
