--- a/index.html
+++ b/index.html
@@ -1,70 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Good Brother Music</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Notable&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-</head>
-<body>
-
-<!-- <div class="icon-bar">
-  <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> 
-  <a href="#" class="soundcloud"><i class="fa fa-soundcloud"></i></a> 
-  <a href="#" class="instagram"><i class="fa fa-instagram"></i></a> 
-  <a href="#" class="youtube"><i class="fa fa-youtube"></i></a> 
-</div> -->
-
-<!-- <div class="container-fluid text-center">  
-    <div class="row justify-content-md-center">
-        <div class="icon-bar">
-            <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> 
-            <a href="#" class="soundcloud"><i class="fa fa-soundcloud"></i></a> 
-            <a href="#" class="instagram"><i class="fa fa-instagram"></i></a> 
-            <a href="#" class="youtube"><i class="fa fa-youtube"></i></a> 
-          </div>
-    </div>  
-</div> -->
-
-<div class="container-fluid text-center landing">
-  <div class="row justify-content-md-center">
-      <img src="./images/gb_2019.jpg" class="img-responsive center-block" width="65%">
-      Good Brother
-  </div>
-  <div style="font-size: 3vw">
-      <a href="https://www.facebook.com/goodbrothermusic/" class="fa fa-facebook"></a> 
-      <a href="https://soundcloud.com/imgoodbrother" class="fa fa-soundcloud"></a> 
-      <a href="https://www.instagram.com/imgoodbrother/?hl=en" class="fa fa-instagram"></a> 
-      <a href="https://www.youtube.com/channel/UCNl7mv0_N06MFsK4Y8ZgfQw" class="fa fa-youtube"></a> 
-  </div>
-</div>
-
-<div class="container-fluid text-center">    
+  <head>
+    <title>Good Brother Music</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Notable&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  </head>
   
-  <div class="row justify-content-md-center">
-    <p ><img src="./images/peace.jpg" class="img-responsive center-block" width="80%"></p>
-  </div>
-
-  <div class="row justify-content-md-center">
-    <p> <iframe src="https://open.spotify.com/embed/artist/1SfVMyhBUa6GmDEk0M1kM3" width: "100%" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
-  </div>
-
-  <div class="row justify-content-md-center">
-    <div style="position:relative;height:50vw;margin-top: 20vh;margin-bottom: 20vh;">
-      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jx2nKBqqJWY" allowfullscreen style="position:absolute;transform: translate(-50%, -50%);top:50%;left:50%;width:80%;height:100%;"></iframe>
+  <body>
+    <div class="container-fluid" style="padding: 0%; margin-bottom: 15vh;">
+      <img src="./images/bananatown.jpg" style="width:100%;">
+      <div class="top-right" style="font-size: 3vw">
+        <a href="https://www.facebook.com/goodbrothermusic/" class="fa fa-facebook"></a> 
+        <a href="https://soundcloud.com/imgoodbrother" class="fa fa-soundcloud"></a> 
+        <a href="https://www.instagram.com/imgoodbrother/?hl=en" class="fa fa-instagram"></a> 
+        <a href="https://www.youtube.com/channel/UCNl7mv0_N06MFsK4Y8ZgfQw" class="fa fa-youtube"></a> 
+      </div>
     </div>
-  </div>
 
-  <div class="row justify-content-md-center">
-    <p><img src="./images/india_fanta_nic.jpg" class="img-responsive center-block" style="max-width: 70vw;"></p>
-  </div>
-  
-</div>
+    <div class="container-fluid text-center">          
+      <div class="row justify-content-md-center">
+          <p><img src="./images/greetings.png" class="img-responsive center-block" style="max-width: 55vw;"></p>
+      </div>
+      
+      <div class="row justify-content-md-center">
+        <p> <iframe src="https://open.spotify.com/embed/album/4mIu7v84NwZys7vufNP2Ji" width: "100%" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
+      </div>
 
-</body>
+      <div class="row justify-content-md-center">
+        <div style="position:relative;height:50vw;margin-top: 20vh;margin-bottom: 20vh;">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/yOwhsUGA-OI" allowfullscreen style="position:absolute;transform: translate(-50%, -50%);top:50%;left:50%;width:80%;height:100%;"></iframe>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <p><img src="./images/000046.jpg" class="img-responsive center-block" style="max-width: 50vw;"></p>
+      </div>
+      
+    </div>
+
+
+  </body>
 </html>
