--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="row justify-content-md-center">
-        <p><img src="./images/000046.jpg" class="img-responsive center-block" style="max-width: 50vw;"></p>
+        <p><img src="./images/flower.jpg" class="img-responsive center-block" style="max-width: 50vw;"></p>
       </div>
       
     </div>
